@@ -1,3 +1,9 @@
+Thu Jan  1 18:41:06 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* Makefile:
+
+	  Do not compile CIAO with static_libs_only=1.
+
 Thu Jan  1 13:53:53 2004  Boris Kolpackov  <boris@kolpackov.net>
 
 	* CCF/CCF/IDL2/SemanticGraph/Elements.hpp (class Nameable)
